<resources>
    <string name="app_name">New World</string>
    <string name="hello_world">Hello Worlds</string>
    <string name="button_click">Click me</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="email">Email:</string>
    <string name="enter_firstname">Enter firstname</string>
    <string name="enter_lastname">Enter lastname</string>
    <string name="enter_email">Enter email</string>
    <string name="add_user">Add user</string>
    <string name="add">Add</string>
</resources>